--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,9 @@
   box-sizing: border-box;
   font-family: 'Raleway', sans-serif;
 }
-
+.Loading-comp {
+  width: 100%; text-align: center;
+}
 :root{
   --azul:#162326;
   --cremaoscura:#D9A78B;
